[gd_scene load_steps=22 format=2]

[ext_resource path="res://backgrounds/correcaochaoparquercrianca-export (1)edt.png" type="Texture" id=1]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=2]
[ext_resource path="res://scenes/itens/Banana.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/itens/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/itens/Soda.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/itens/FriedPotatoes.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/itens/SunProtector.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/PlayerChild.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/itens/Door.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/itens/SolBom.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/itens/Sun.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/itens/Healthbar.tscn" type="PackedScene" id=12]
[ext_resource path="res://sounds/item bom (1).wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/item ruim (1).ogg" type="AudioStream" id=14]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/ChildPark.gd" type="Script" id=16]
[ext_resource path="res://scenes/itens/Chocolate.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/itens/VacineHBC.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/HitOverlay.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.5, 335 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5176.91, 37.5 )

[node name="ChildPark" type="Node2D"]
script = ExtResource( 16 )

[node name="Correcaochaoparquercrianca-export(1)edt" type="Sprite" parent="."]
position = Vector2( 4915.95, 295 )
scale = Vector2( 0.765572, 0.7625 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 9600, 282 )
shape = SubResource( 3 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 4422.09, 574 )
shape = SubResource( 1 )

[node name="Elements" type="Node" parent="."]

[node name="Soda" type="Node" parent="Elements"]

[node name="Soda" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 1742, 103 )
scale = Vector2( 0.5, 0.5 )
points = -4

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda"]
stream = ExtResource( 14 )

[node name="Soda2" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 3210, 134 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda2"]
position = Vector2( 0, 2 )
stream = ExtResource( 14 )

[node name="Soda3" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 4736, 345 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda3"]
position = Vector2( 0, 6 )
stream = ExtResource( 14 )

[node name="Soda4" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 5925, 67 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda4"]
position = Vector2( 0, 6 )
stream = ExtResource( 14 )

[node name="Soda5" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 5537, 439 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda5"]
position = Vector2( 0, 6 )
stream = ExtResource( 14 )

[node name="Soda6" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 8700, 333 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda6"]
position = Vector2( 0, 6 )
stream = ExtResource( 14 )

[node name="Soda7" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 7719, 137 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda7"]
position = Vector2( -4, -6 )
stream = ExtResource( 14 )

[node name="Soda8" parent="Elements/Soda" instance=ExtResource( 5 )]
position = Vector2( 3047, 308 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSodaFx" type="AudioStreamPlayer2D" parent="Elements/Soda/Soda8"]
position = Vector2( 0, 6 )
stream = ExtResource( 14 )

[node name="FriedPotatoes" type="Node" parent="Elements"]

[node name="FriedPotatoes" parent="Elements/FriedPotatoes" instance=ExtResource( 6 )]
position = Vector2( 2256, 360 )
scale = Vector2( 0.5, 0.5 )
points = -26

[node name="CollectedFriedPotatoesFx" type="AudioStreamPlayer2D" parent="Elements/FriedPotatoes/FriedPotatoes"]
stream = ExtResource( 14 )

[node name="FriedPotatoes2" parent="Elements/FriedPotatoes" instance=ExtResource( 6 )]
position = Vector2( 4668, 87 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedFriedPotatoesFx" type="AudioStreamPlayer2D" parent="Elements/FriedPotatoes/FriedPotatoes2"]
stream = ExtResource( 14 )

[node name="FriedPotatoes3" parent="Elements/FriedPotatoes" instance=ExtResource( 6 )]
position = Vector2( 3895, 96 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedFriedPotatoesFx" type="AudioStreamPlayer2D" parent="Elements/FriedPotatoes/FriedPotatoes3"]
stream = ExtResource( 14 )

[node name="FriedPotatoes4" parent="Elements/FriedPotatoes" instance=ExtResource( 6 )]
position = Vector2( 3873, 415 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedFriedPotatoesFx" type="AudioStreamPlayer2D" parent="Elements/FriedPotatoes/FriedPotatoes4"]
stream = ExtResource( 14 )

[node name="FriedPotatoes5" parent="Elements/FriedPotatoes" instance=ExtResource( 6 )]
position = Vector2( 3267, 446 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedFriedPotatoesFx" type="AudioStreamPlayer2D" parent="Elements/FriedPotatoes/FriedPotatoes5"]
stream = ExtResource( 14 )

[node name="SunProtector" type="Node" parent="Elements"]

[node name="SunProtector" parent="Elements/SunProtector" instance=ExtResource( 7 )]
position = Vector2( 2382, 182 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSunProtectorFx" type="AudioStreamPlayer2D" parent="Elements/SunProtector/SunProtector"]
stream = ExtResource( 13 )

[node name="SunProtector2" parent="Elements/SunProtector" instance=ExtResource( 7 )]
position = Vector2( 2382, 182 )
scale = Vector2( 0.5, 0.5 )

[node name="CollectedSunProtectorFx" type="AudioStreamPlayer2D" parent="Elements/SunProtector/SunProtector2"]
stream = ExtResource( 13 )

[node name="BadSun" type="Node" parent="Elements"]

[node name="BadSun" parent="Elements/BadSun" instance=ExtResource( 11 )]
position = Vector2( 994, 257 )
points = -12

[node name="CollectedSunFx" type="AudioStreamPlayer2D" parent="Elements/BadSun/BadSun"]
stream = ExtResource( 13 )

[node name="BadSun2" parent="Elements/BadSun" instance=ExtResource( 11 )]
position = Vector2( 969, -51 )

[node name="CollectedSunFx" type="AudioStreamPlayer2D" parent="Elements/BadSun/BadSun2"]
stream = ExtResource( 13 )

[node name="BadSun3" parent="Elements/BadSun" instance=ExtResource( 11 )]
position = Vector2( 5896, 181 )

[node name="CollectedSunFx" type="AudioStreamPlayer2D" parent="Elements/BadSun/BadSun3"]
stream = ExtResource( 13 )

[node name="BadSun4" parent="Elements/BadSun" instance=ExtResource( 11 )]
position = Vector2( 4338, 193 )

[node name="CollectedSunFx" type="AudioStreamPlayer2D" parent="Elements/BadSun/BadSun4"]
stream = ExtResource( 13 )

[node name="Ball" type="Node" parent="Elements"]

[node name="Ball" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 807, 450 )
scale = Vector2( 0.8, 0.8 )
points = 5

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball"]
stream = ExtResource( 13 )

[node name="Ball2" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 986, 198 )
scale = Vector2( 0.8, 0.8 )

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball2"]
stream = ExtResource( 13 )

[node name="Ball3" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 7302, 404 )
scale = Vector2( 0.8, 0.8 )

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball3"]
stream = ExtResource( 13 )

[node name="Ball4" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 2581, 458 )
scale = Vector2( 0.8, 0.8 )

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball4"]
stream = ExtResource( 13 )

[node name="Ball5" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 6124, 212 )
scale = Vector2( 0.8, 0.8 )

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball5"]
stream = ExtResource( 13 )

[node name="Ball6" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 8500, 281 )
scale = Vector2( 0.8, 0.8 )

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball6"]
stream = ExtResource( 13 )

[node name="Ball7" parent="Elements/Ball" instance=ExtResource( 4 )]
position = Vector2( 2656, 154 )
scale = Vector2( 0.8, 0.8 )

[node name="CollectedBallFx" type="AudioStreamPlayer2D" parent="Elements/Ball/Ball7"]
stream = ExtResource( 13 )

[node name="Banana" type="Node" parent="Elements"]

[node name="Banana" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 1070, 501 )
scale = Vector2( 0.65, 0.65 )
points = 5

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana"]
stream = ExtResource( 13 )

[node name="Banana2" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 5047, 325 )
scale = Vector2( 0.65, 0.65 )

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana2"]
stream = ExtResource( 13 )

[node name="Banana3" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 5560, 234 )
scale = Vector2( 0.65, 0.65 )

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana3"]
stream = ExtResource( 13 )

[node name="Banana4" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 8584, 354 )
scale = Vector2( 0.65, 0.65 )

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana4"]
stream = ExtResource( 13 )

[node name="Banana5" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 2162, 114 )
scale = Vector2( 0.65, 0.65 )

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana5"]
stream = ExtResource( 13 )

[node name="Banana6" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 6726, 186 )
scale = Vector2( 0.65, 0.65 )

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana6"]
stream = ExtResource( 13 )

[node name="Banana7" parent="Elements/Banana" instance=ExtResource( 3 )]
position = Vector2( 2881, 467 )
scale = Vector2( 0.65, 0.65 )

[node name="CollectedBananaFx" type="AudioStreamPlayer2D" parent="Elements/Banana/Banana7"]
stream = ExtResource( 13 )

[node name="GoodSun" type="Node" parent="Elements"]

[node name="GoodSun" parent="Elements/GoodSun" instance=ExtResource( 10 )]
position = Vector2( 555, 323 )
points = 5

[node name="GoodSun2" parent="Elements/GoodSun" instance=ExtResource( 10 )]
position = Vector2( 555, 323 )
points = 5

[node name="Chocolate" type="Node" parent="Elements"]

[node name="Chocolate" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 736, 293 )
points = -20

[node name="Chocolate2" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 561, 274 )

[node name="Chocolate3" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 1444, 99 )

[node name="Chocolate4" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 1121, 111 )

[node name="Chocolate5" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 1300, 300 )

[node name="Chocolate6" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 1286, 60 )

[node name="Chocolate7" parent="Elements/Chocolate" instance=ExtResource( 17 )]
position = Vector2( 1248, 196 )

[node name="VacineHBC" type="Node" parent="Elements"]

[node name="VacineHBC" parent="Elements/VacineHBC" instance=ExtResource( 18 )]
position = Vector2( 925, 350 )

[node name="Player" parent="." instance=ExtResource( 8 )]
position = Vector2( 420, 437 )
scale = Vector2( 0.5, 0.5 )

[node name="HitOverlay" parent="Player" instance=ExtResource( 19 )]
position = Vector2( -344, -374 )
scale = Vector2( 0.7, 0.7 )

[node name="Door" parent="." instance=ExtResource( 9 )]
position = Vector2( 8503, -2 )
targetScenePath = "res://scenes/scenarios/AdolescentCity.tscn"

[node name="Pause" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 9156, 76 )

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 416, 305 )
scale = Vector2( 1.33222, 1.33222 )
current = true
drag_margin_v_enabled = true
smoothing_speed = 6.0
drag_margin_top = 0.8
drag_margin_bottom = 0.0

[node name="Healthbar" parent="PlayerCamera" instance=ExtResource( 12 )]
position = Vector2( -376.064, -219.183 )

[node name="MenuPause" parent="PlayerCamera" instance=ExtResource( 15 )]
visible = false
position = Vector2( -313, -176 )
scale = Vector2( 0.5, 0.5 )
z_index = 5

[connection signal="body_entered" from="Elements/GoodSun/GoodSun" to="Elements/GoodSun/GoodSun" method="_on_GoodSun_body_entered"]
[connection signal="body_entered" from="Elements/GoodSun/GoodSun2" to="Elements/GoodSun/GoodSun2" method="_on_GoodSun_body_entered"]
[connection signal="body_entered" from="Elements/VacineHBC/VacineHBC" to="Elements/VacineHBC/VacineHBC" method="_on_VacineHBC_body_entered"]
